--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@remix-run/serve": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-to-print": "^2.14.12",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
