--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL="file:./data.db?connection_limit=1"
+# DATABASE_URL="file:./data.db?connection_limit=1"
+DATABASE_URL="postgresql://postgres:asifekbal1234@db.bfiowiqfoxbnjnmblned.supabase.co:5432/postgres"
 SESSION_SECRET="super-duper-s3cret"
