--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "build:setup": "prisma migrate dev",
+    "dev:setup": "prisma migrate dev",
     "setup": "prisma migrate dev",
     "start": "remix-serve build"
   },
