--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@remix-run/node": "^1.3.3",
     "@remix-run/react": "^1.3.3",
     "@remix-run/serve": "^1.3.3",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-to-print": "^2.14.12",
