--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# DATABASE_URL="file:./data.db?connection_limit=1"
-DATABASE_URL="postgresql://postgres:asifekbal1234@db.bfiowiqfoxbnjnmblned.supabase.co:5432/postgres"
+DATABASE_URL="file:./data.db?connection_limit=1"
+# DATABASE_URL="postgres://unwrctyl:TKjxCh4gpEkt2xpVnlzS0ZNkCACSuWDC@snuffleupagus.db.elephantsql.com/unwrctyl"
 SESSION_SECRET="super-duper-s3cret"
